Done OLS Method of Linear Regression

--- a/main_demo.ipynb
+++ b/main_demo.ipynb
@@ -87,8 +87,39 @@
    "execution_count": null,
    "id": "da9358e2",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(8.376771143918868)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import MyML.src.utils as Utils\n",
+    "\n",
+    "Utils.mean_absolute_error(y_test,y_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f83d224",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Cheking linear Regression in Scikit Learn...\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "lr = LinearRegression()\n",
+    "\n",
+    "lr.fit(X_train,y_train)\n",
+    "\n",
+    "print(lr.coef_,lr.intercept_)"
+   ]
   }
  ],
  "metadata": {
