Completed Linear Regression

--- a/main_demo.ipynb
+++ b/main_demo.ipynb
@@ -120,6 +120,93 @@
     "\n",
     "print(lr.coef_,lr.intercept_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5401d8c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.44375984 16.54786396] -1.7226937969510323\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Generating random dataset for testing my model....\n",
+    "from sklearn.datasets import make_regression\n",
+    "X,y = make_regression(\n",
+    "    n_samples=100,\n",
+    "    n_features=2,\n",
+    "    noise=10,\n",
+    "    random_state=12\n",
+    ") \n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train,X_test,y_train,y_test  = train_test_split(X,y,test_size=0.2,random_state=12)\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "lr = LinearRegression()\n",
+    "\n",
+    "lr.fit(X_train,y_train)\n",
+    "\n",
+    "print(lr.coef_,lr.intercept_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5225b3be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: 50, Weights: [ 2.48308100e+15 -1.81193855e+15] , Intercept: -329921203817778.75\n",
+      "Epochs: 100, Weights: [ 3.99534578e+30 -1.20388509e+30] , Intercept: -1.9689286521351803e+30\n",
+      "Epochs: 150, Weights: [ 6.76741301e+45 -1.83692674e+45] , Intercept: -3.505001129674381e+45\n",
+      "Epochs: 200, Weights: [ 1.15028764e+61 -3.09960300e+60] , Intercept: -5.976690533435564e+60\n",
+      "Epochs: 250, Weights: [ 1.95564547e+76 -5.26720688e+75] , Intercept: -1.016332173334226e+76\n",
+      "Epochs: 300, Weights: [ 3.32491366e+91 -8.95481970e+90] , Intercept: -1.7279529848152898e+91\n",
+      "Epochs: 350, Weights: [ 5.65289673e+106 -1.52246255e+106] , Intercept: -2.9378052039582904e+106\n",
+      "Epochs: 400, Weights: [ 9.61084912e+121 -2.58843502e+121] , Intercept: -4.994749700132749e+121\n",
+      "Epochs: 450, Weights: [ 1.63400157e+137 -4.40076292e+136] , Intercept: -8.491891581936331e+136\n",
+      "Epochs: 500, Weights: [ 2.77806996e+152 -7.48201686e+151] , Intercept: -1.4437604829905472e+152\n",
+      "Epochs: 550, Weights: [ 4.72317338e+167 -1.27206526e+167] , Intercept: -2.4546289971648203e+167\n",
+      "Epochs: 600, Weights: [ 8.03016739e+182 -2.16271903e+182] , Intercept: -4.1732708330910803e+182\n",
+      "Epochs: 650, Weights: [ 1.36525982e+198 -3.67697614e+197] , Intercept: -7.095243096381658e+197\n",
+      "Epochs: 700, Weights: [ 2.32116502e+213 -6.25146093e+212] , Intercept: -1.2063073931739166e+213\n",
+      "Epochs: 750, Weights: [ 3.94636024e+228 -1.06285062e+228] , Intercept: -2.0509199009236698e+228\n",
+      "Epochs: 800, Weights: [ 6.70945798e+243 -1.80701992e+243] , Intercept: -3.4868993291482886e+243\n",
+      "Epochs: 850, Weights: [ 1.14071761e+259 -3.07222947e+258] , Intercept: -5.928299260316808e+258\n",
+      "Epochs: 900, Weights: [ 1.93940654e+274 -5.22329266e+273] , Intercept: -1.0079078517146993e+274\n",
+      "Epochs: 950, Weights: [ 3.29730838e+289 -8.88045197e+288] , Intercept: -1.7136082254623744e+289\n",
+      "(array([ 2.77997226e+304, -7.48714020e+303]), np.float64(-1.444749103579345e+304))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from MyML.src.linear_model import LinearRegression as mylr\n",
+    "\n",
+    "glr = mylr(solver='gd')\n",
+    "\n",
+    "print(glr.fit(X_train,y_train))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c7dd808",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
