--- a/demo.ipynb
+++ b/demo.ipynb
@@ -17,11 +17,79 @@
     "    n_features=2,\n",
     "    noise=10,\n",
     "    random_state=12\n",
-    ")\n",
+    ") \n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train,X_test,y_train,y_test  = train_test_split(X,y,test_size=0.2,random_state=12)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a7e0c002",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.44375984 16.54786396] -1.7226937969510323\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Generating random dataset for testing my model....\n",
+    "from sklearn.datasets import make_regression\n",
+    "X,y = make_regression(\n",
+    "    n_samples=100,\n",
+    "    n_features=2,\n",
+    "    noise=10,\n",
+    "    random_state=12\n",
+    ") \n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train,X_test,y_train,y_test  = train_test_split(X,y,test_size=0.2,random_state=12)\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "lr = LinearRegression()\n",
+    "\n",
+    "lr.fit(X_train,y_train)\n",
+    "\n",
+    "print(lr.coef_,lr.intercept_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "df499baa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([ -11.42252573, 3201.28474473]), np.float64(-779.4192623845187))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from MyML.src.linear_model import LinearRegression as mylr\n",
+    "\n",
+    "glr = mylr(solver='gd')\n",
+    "\n",
+    "print(glr.fit(X_train,y_train))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2e637e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -31,7 +99,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.14.0"
   }
  },
